--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -52,7 +52,7 @@ java.util.logging.ConsoleHandler.formatter = net.java.sip.communicator.util.ScLo
 # We don't want trace logs from joscar and joustsim
 net.kano.level = INFO
 # But we want everything coming from the sip-comm
-net.java.sip.communicator.impl.level = FINEST
+net.java.sip.communicator.impl.contactlist.level = FINEST
 net.java.sip.communicator.slick.level = FINEST
 
 # For example, set the com.xyz.foo logger to only log SEVERE
