We need to forward all properties in the testing.properties file to the application. I therefore added the "net" prefix to the list of prefixes that ant would pass on
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@662 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -286,6 +286,7 @@
             <!-- Tell all protocol testers their account details. -->
             <syspropertyset id="accounts">
               <propertyref prefix="accounts"/>
+              <propertyref prefix="net"/>
             </syspropertyset>
         </java>
 
