The meta contact list slick should be using a separate contact list file in order not to delete existing contact lists.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@670 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -1,7 +1,6 @@
 # This file contains a list of properties that initialize the sip-communicator
 # environment when running automated testing.
 
-
 # A list of all tests that should be run by the test target of the project.
 test.list=ConfigurationServiceLick \
  MediaServiceLick \
@@ -12,3 +11,7 @@ test.list=ConfigurationServiceLick \
  IcqProtocolProviderSlick \
  MetaContactListServiceLick
 
+# Set the name of the meta contact list file to use during testing so that
+# we do not meddle with the file we're using while running the application
+# in client mode.
+net.java.sip.communicator.CONTACTLIST_FILE_NAME=testing.contactlist.xml
