--- a/lib/oscar.unit.test.properties
+++ b/lib/oscar.unit.test.properties
@@ -52,7 +52,8 @@ oscar.auto.start.4= \
  file:sc-bundles/history.jar \
  file:sc-bundles/protocol-icq.jar \
  file:sc-bundles/media.jar \
- file:sc-bundles/meta-cl.jar
+ file:sc-bundles/meta-cl.jar \
+ file:sc-bundles/msghistory.jar
 
 oscar.auto.start.5= \
  file:sc-bundles/slickless.jar \
@@ -62,8 +63,8 @@ oscar.auto.start.5= \
  file:sc-bundles/fileaccess-slick.jar \
  file:sc-bundles/history-slick.jar \
  file:sc-bundles/protocol-icq-slick.jar \
- file:sc-bundles/meta-cl-slick.jar
-
+ file:sc-bundles/meta-cl-slick.jar \
+ file:sc-bundles/msghistory-slick.jar
 
 oscar.auto.start.100= \
  file:sc-bundles/slick-runner.jar
