--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -7,6 +7,7 @@ test.list=ConfigurationServiceLick \
  NetworkAddressManagerServiceLick \
  FileAccessServiceLick \
  HistoryServiceLick \
+ MsgHistoryServiceLick \
  SlicklessTests \
  IcqProtocolProviderSlick \
  MetaContactListServiceLick
