Added a reference to the html test reports at the end of each test run.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@745 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -303,6 +303,7 @@
            <arg value="htmlreport"/>
         </java>
         <echo message="Done."/>
+        <echo message="Test results available in ./test-reports/html/index.html "/>
 
         <!-- Check whether testing went alright and fail if not.-->
         <condition property="testing.failed">
