--- a/build.xml
+++ b/build.xml
@@ -113,13 +113,20 @@
     </target>
 
     <!-- clean -->
-    <target name="clean" depends="clean-bundle-repositories"
+    <target name="clean" depends="clean-bundle-repositories,clean-test-reports"
         description="Remove all generated files and prepare for a clean build.">
         <delete failonerror="false" includeemptydirs="true">
             <fileset dir="${dest}"/>
             <fileset dir="${bundles.dest}"/>
             <fileset dir="${native.libs}"/>
             <fileset dir="${java.doc}"/>
+        </delete>
+    </target>
+
+    <!-- internal target - removes the current set of test reports, so
+         residual data is not left to confuse a cached browser -->
+    <target name="clean-test-reports">
+        <delete failonerror="false" includeemptydirs="true">
             <fileset dir="${test.reports.dir}"/>
         </delete>
     </target>
@@ -255,7 +262,8 @@
     </target>
 
     <!--RUN-TESTS-->
-    <target name="test" depends="prepare-single-test,prepare-all-tests"
+    <target name="test" 
+        depends="prepare-single-test,prepare-all-tests,clean-test-reports"
         description="Starts oscar and runs selected Service Impl Compatibility Kits.">
 
         <!-- Do the testing itself. Note that we don't fail on error as we need
