Set a different name of the configuration file to use during testing so that we do not meddle with the file we're using while running the application in client mode.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@787 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -16,3 +16,8 @@ test.list=ConfigurationServiceLick \
 # we do not meddle with the file we're using while running the application
 # in client mode.
 net.java.sip.communicator.CONTACTLIST_FILE_NAME=testing.contactlist.xml
+
+# Set the name of the configuration file to use during testing so that
+# we do not meddle with the file we're using while running the application
+# in client mode.
+net.java.sip.communicator.CONFIGURATION_FILE_NAME=testing.sip-communicator.xml
