--- a/lib/oscar.unit.test.properties
+++ b/lib/oscar.unit.test.properties
@@ -58,6 +58,8 @@ oscar.auto.start.4= \
 oscar.auto.start.5= \
  file:sc-bundles/slickless.jar \
  file:sc-bundles/configuration-slick.jar \
+ file:sc-bundles/protocol.jar \
+ file:sc-bundles/protocol-mock.jar \
  file:sc-bundles/media-slick.jar \
  file:sc-bundles/netaddr-slick.jar \
  file:sc-bundles/fileaccess-slick.jar \
