protocol.jar added
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@806 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -44,6 +44,7 @@ oscar.auto.start.2= \
 oscar.auto.start.3= \
  file:sc-bundles/configuration.jar \
  file:sc-bundles/fileaccess.jar \
+ file:sc-bundles/protocol.jar \
  file:sc-bundles/media.jar \
  file:sc-bundles/protocol-icq.jar \
  file:sc-bundles/netaddr.jar \
