--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -56,8 +56,11 @@ oscar.auto.start.4= \
  file:sc-bundles/msghistory.jar
  
 
- oscar.auto.start.99= \
+ oscar.auto.start.66= \
  file:sc-bundles/swing-ui.jar
+ 
+ oscar.auto.start.67= \
+ file:sc-bundles/icqaccregwizz.jar
 
 # Uncomment the following lines if you want to run the architect viewer
 # bundle.
