Fixed message history tests
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@861 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -7,10 +7,10 @@ test.list=ConfigurationServiceLick \
  NetworkAddressManagerServiceLick \
  FileAccessServiceLick \
  HistoryServiceLick \
- MsgHistoryServiceLick \
  SlicklessTests \
  IcqProtocolProviderSlick \
- MetaContactListServiceLick
+ MetaContactListServiceLick \
+ MsgHistoryServiceLick
 
 # Set the name of the meta contact list file to use during testing so that
 # we do not meddle with the file we're using while running the application
