--- a/build.xml
+++ b/build.xml
@@ -433,6 +433,9 @@
             failonerror="true"
             classpathref="project.class.path">
 
+            <!-- Sets the charset for the messages -->
+            <!--sysproperty key="icq.custom.message.charset" value="windows-1252"/-->
+
             <!-- Tell oscar to run sip-communicator-->
             <sysproperty key="oscar.config.properties"
                 value="file:./lib/oscar.client.run.properties"/>
@@ -801,7 +804,7 @@ javax.swing.event, javax.swing.border"/>
                 prefix="net/java/sip/communicator/slick/contactlist"/>
         </jar>
     </target>
-	
+
 	<!-- BUNDLE-PLUGIN-ICQACCREGWIZZ -->
     <target name="bundle-plugin-icqaccregwizz">
         <!-- Creates a bundle for the pligon Icq Account Registration Wizard."-->
