--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -26,6 +26,7 @@ handlers= java.util.logging.ConsoleHandler
 # can be overriden by a facility specific level
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
+#.level= FINEST
 .level= INFO
 
 ############################################################
@@ -52,10 +53,12 @@ java.util.logging.ConsoleHandler.formatter = net.java.sip.communicator.util.ScLo
 # We don't want trace logs from joscar and joustsim
 net.kano.level = INFO
 # But we want everything coming from the sip-comm
-net.java.sip.communicator.impl.contactlist.level = FINEST
+net.java.sip.communicator.level = FINEST
+net.java.sip.communicator.impl.contactlist.level = ALL
 net.java.sip.communicator.slick.level = FINEST
 
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
 com.xyz.foo.level = SEVERE
+
 
