--- a/lib/oscar.unit.test.properties
+++ b/lib/oscar.unit.test.properties
@@ -47,7 +47,7 @@ oscar.auto.start.3= \
  file:sc-bundles/netaddr.jar
 
 oscar.auto.start.4= \
- file:sc-bundles/protocol-sip.jar \
+ file:sc-bundles/protocol.jar \
  file:sc-bundles/fileaccess.jar \
  file:sc-bundles/history.jar \
  file:sc-bundles/protocol-icq.jar \
@@ -64,8 +64,8 @@ oscar.auto.start.5= \
  file:sc-bundles/netaddr-slick.jar \
  file:sc-bundles/fileaccess-slick.jar \
  file:sc-bundles/history-slick.jar \
- file:sc-bundles/protocol-icq-slick.jar \
  file:sc-bundles/meta-cl-slick.jar \
+ file:sc-bundles/protocol-icq-slick.jar \
  file:sc-bundles/msghistory-slick.jar
 
 oscar.auto.start.100= \
