--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -50,7 +50,7 @@ java.util.logging.ConsoleHandler.formatter = net.java.sip.communicator.util.ScLo
 ############################################################
 
 # We don't want trace logs from joscar and joustsim
-net.kano.level = FINEST
+net.kano.level = INFO
 # But we want everything coming from the sip-comm
 net.java.sip.communicator.impl.contactlist.level = FINEST
 net.java.sip.communicator.slick.level = FINEST
