--- a/build.xml
+++ b/build.xml
@@ -512,7 +512,7 @@
         depends="bundle-util,bundle-configuration,bundle-configuration-slick,
         bundle-history,bundle-history-slick,bundle-messagehistory, bundle-msghistory-slick,
         bundle-netaddr,bundle-netaddr-slick,bundle-slickless,
-        bundle-slick-runner,bundle-sip,bundle-fileaccess,
+        bundle-slick-runner,bundle-sip,bundle-sip-slick,bundle-fileaccess,
         bundle-fileaccess-slick,bundle-media,bundle-media-slick,
         bundle-protocol,bundle-icq,bundle-icq-slick,bundle-mock,bundle-swing-ui,
         meta-contactlist,meta-contactlist-slick,bundle-plugin-icqaccregwizz"/>
@@ -721,6 +721,9 @@ javax.swing.event, javax.swing.border"/>
             manifest="src/net/java/sip/communicator/impl/protocol/sip/sip.provider.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/impl/protocol/sip"
                 prefix="net/java/sip/communicator/impl/protocol/sip"/>
+            <zipfileset src="${lib}/sip-sdp.jar" prefix=""/>
+            <zipfileset src="${lib}/concurrent.jar" prefix=""/>
+            <zipfileset src="${lib}/log4j-1.2.8.jar" prefix=""/>
         </jar>
     </target>
     <target name="bundle-sip-slick">
