Intermediat commit on SIP Support (Work in Progress!)
added net.javax.ssl to system packages for use by jain-sip


git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1037 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.unit.test.properties
+++ b/lib/oscar.unit.test.properties
@@ -17,11 +17,9 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.xml.transform;\
  javax.xml.transform.dom;\
  javax.xml.transform.stream;\
- net.java.stun4j; \
- net.java.stun4j.StunAddress;\
- net.java.stun4j.StunException;\
+ net.java.stun4j;\
  net.java.stun4j.client;\
- org.apache.tools.ant.taskdefs.optional.junit;
+ javax.net.ssl;
 
 
 #
@@ -51,6 +49,7 @@ oscar.auto.start.4= \
  file:sc-bundles/fileaccess.jar \
  file:sc-bundles/history.jar \
  file:sc-bundles/protocol-icq.jar \
+ file:sc-bundles/protocol-sip.jar \
  file:sc-bundles/media.jar \
  file:sc-bundles/meta-cl.jar \
  file:sc-bundles/msghistory.jar
@@ -66,6 +65,7 @@ oscar.auto.start.5= \
  file:sc-bundles/history-slick.jar \
  file:sc-bundles/meta-cl-slick.jar \
  file:sc-bundles/protocol-icq-slick.jar \
+ file:sc-bundles/protocol-sip-slick.jar \
  file:sc-bundles/msghistory-slick.jar
 
 oscar.auto.start.100= \
