Intermediat commit on SIP Support (Work in Progress!)
Added the sip SLICK to the list of tests to run


git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1038 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -10,6 +10,7 @@ test.list=ConfigurationServiceLick \
  SlicklessTests \
  MetaContactListServiceLick \
  IcqProtocolProviderSlick \
+ SipProtocolProviderServiceLick \
  MsgHistoryServiceLick
 
 # Set the name of the meta contact list file to use during testing so that
