--- a/build.xml
+++ b/build.xml
@@ -20,6 +20,7 @@
     <property name="test.reports.dir" value="test-reports"/>
     <property name="test.html.reports.dir" value="${test.reports.dir}/html"/>
     <property name="release" value="release"/>
+    <property name="release.src" value="${release}/install"/>
     <property name="inst.resrc" value="resources/install"/>
 
     <!-- Put here the release directory -->
@@ -94,6 +95,9 @@
             <include name="**/*.jar"/>
         </fileset>
     </path>
+    
+    <!-- Import installation build xml -->
+    <import file="${release.src}/build.xml"/>
 
   <!-- default Ant target does nothing except print helpful options -->
   <!-- Ant-external target will appear in -projecthelp output       -->
