launch the default browser on mac - work in progress
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@1065 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/oscar.client.run.properties
+++ b/lib/oscar.client.run.properties
@@ -30,8 +30,11 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  net.java.stun4j; \
  net.java.stun4j.client; \
  net.java.stun4j.StunAddress; \
- net.java.stun4j.StunException;
-
+ net.java.stun4j.StunException; \
+ edu.stanford.ejalbert; \
+ edu.stanford.ejalbert.exception; \
+ edu.stanford.ejalbert.exceptionhandler;
+ 
 oscar.auto.start.1= \
  file:lib/bundle/shell.jar \
  file:lib/bundle/bundlerepository.jar \
